
	cQueue:
	- sorting removed (class can no longer be used as priority queue)
	- head()/tail() removed, back()/front() added (insert at back, pop from front!);
	  because of head/tail change, iterator direction and meaning of insertBefore/insertAfter
	  has changed
	- compat.h typedef cQueueIterator removed, as iterator semantic was changed in a non-compatible way anyway

	cArray:
	- items() became size()

	Display strings:
	- connection display string is now stored in the channel, not the source gate
	- setDisplayString() methods removed
	- displayString() delegates to channel()->displayString(); if there's 
	  no channel, it creates a cIdealChannel
	- module and channel display string access functions are now in the common 
	  base class, cComponent
	- display string objects are now only created (from @display) when first accessed
	
	Gross renaming: cObject became cOwnedObject, cPolymorphic became cObject;
	- cNamedObject introduced in between.
	- cArray, cQueue still handle cObject (old cPolymorphic), i.e. they can work
	  with non-owned objects as well

	Introduced cComponent, a common base class for cModule and cChannel
	- new methods to mention: isModule(), nedTypeName(), etc

	cSimpleModule, cSimulation:
	- removed: pause(), backtomod, pause_in_sendmsg (they were obsolete)
	- removed: breakpoint(), and its callback method in cEnvir, in Tkenv, etc..
	- sendDirect(): added overloaded methods that accept transmissionDelay as well
	- cancelEvent() now only allows cancelling self-messages

	cModule:
	- removed backgroundDisplayString()/setBackgroundDisplayString() and its compat
	  #defines displayStringAsParent() and setDisplayStringAsParent()
	- added isPlaceholder() to cModule
	- cPlaceHolderModule: renamed to cPlaceholderModule (lowercase h)
	- gate handling reorganized, so that gate IDs are stable (do not change
	  when the gate vector gets resized). Gate IDs are now interpreted as a 
	  bitfield, so they cannot be used for iterating over all gates of a 